feat: 获取kuma监控服务存活状态接口
