# backend/pkg/model/request/service_req.go
@@ -167,3 +167,8 @@ type GetServiceEntryEndpointsRequest struct {
 	Endpoint  string `form:"endpoint" binding:"required"`                  // 查询Endpoint
 	Step      int64  `form:"step" binding:"required"`                      // 查询步长(us)
 }
+
+type GetMonitorStatusRequest struct {
+	StartTime int64 `form:"startTime" binding:"min=0"`                    // 查询开始时间
+	EndTime   int64 `form:"endTime" binding:"required,gtfield=StartTime"` // 查询结束时间
+}
